css/theme.css
/* ... */
.isu-row-site-navbar {
  align-items: center;
  margin-top: -15px;
}
.isu-col-header-first {
  flex: 1 1 0px;
  text-align: center;
}
.isu-col-header-second {
  width: 100%;
  padding: 0;
}

/* --- ## Menu Navbar Toggle --- */

.isu-menu-navbar_toggler {
  width: auto;
  padding: 0.75rem 1rem;
  text-align: center;
  border: 0;
  border-radius: 0;
}
.isu-menu-navbar_toggler:hover,
.isu-menu-navbar_toggler:focus,
.isu-menu-navbar_toggler.isu-menu-navbar_toggler_open {
  background-color: #fff;
}
.isu-menu-navbar_toggler-icon {
  display: block;
  margin-top: 2em;
}
.isu-menu-navbar_toggler-icon::before {
  content: '\f0c9';
  position: absolute;
  font-family: FontAwesome;
  font-size: 2em;
  color: var(--cardinal);
  margin-left: -1em;
  margin-top: -0.5em;
}
.isu-menu-navbar_toggler_open .isu-menu-navbar_toggler-icon:before,.isu-menu-navbar_toggler_open .isu-menu-navbar_toggler-icon:after{
    position: absolute;
    content: '';
    font-size: 1.5em;
    width:1.25em;
    height: 5px;
    margin-left: -1.5em;
    margin-top: -0em;
    background-color: var(--cardinal);
}
.isu-menu-navbar_toggler_open .isu-menu-navbar_toggler-icon:before{
    -webkit-transform:rotate(45deg);
    -moz-transform:rotate(45deg);
    transform:rotate(45deg);
}
.isu-menu-navbar_toggler_open .isu-menu-navbar_toggler-icon:after{
    -webkit-transform:rotate(-45deg);
    -moz-transform:rotate(-45deg);
    transform:rotate(-45deg);
}
.isu-menu-navbar_toggler-label {
  display: none;
}
.isu-menu-navbar_wrap {
  width: 72%;
}
.navbar-toggler:not(:disabled):not(.disabled) {
	margin-top: -23px;
}

/* --------------------------------------  */
/* ## Responsive
/* --------------------------------------  */
@media screen and (max-width : 575px) {
  .isu-col-header-first {
    padding-left: 5px;
    padding-right: 5px;
  }
}


@media screen and (max-width : 768px) {
	 .navbar-toggler:not(:disabled):not(.disabled){
		 margin-top: -10px;
	 }
  }

@media screen and (min-width: 992px) {
  .isu-col-header-first {
    text-align: -webkit-match-parent;
  }
  .isu-region_header-second {
    display: flex;
    flex-direction: column;
    padding-top: 0.5rem;
  }
  .isu-col-header-second {
    padding: 0 15px; /* Back to Bootstrap 4 default */
  }
}

@media screen and (max-width : 1199px) {
  button#isu-menu-navbar_toggler.navbar-toggler.isu-menu-navbar_toggler {
	  margin-left: 20px;
		padding: 20px;
		float: right;
	}
  .isu-col-header-second {
    position: absolute;
  }

  /*Get rid of margins for isu site nav bar*/
  .isu-row-site-navbar{
    margin-top: 0px;
    margin-bottom: 0px;
  }
  .isu-col-header-first {
		text-align: start;
	 }
}

@media screen and (min-width : 1200px) {
.isu-menu-navbar_toggler {
  display: none;
  }
}

/* --- ## ISU Wordmark --- */
/*
 * The combination of the ISU Logo and the site name.
 * Markup found in block--iastate-branding.html.twig
 * Change sitename in Drupal theme settings.
 */

.isu-wordmark {
  color: #ffffff;
  text-decoration: none;
  margin-top: -5%;
}
.isu-wordmark a {
  color: var(--burgundy);
}
.isu-wordmark a:hover {
  color: #ffffff;
  text-decoration: underline;
  }
.isu-wordmark a:focus {
  color: #ffffff;
  }
.isu-wordmark-logo {
  width: 100%;
  max-width: 365px;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}
.isu-wordmark-unit,
.isu-wordmark-sitename {
	max-width: 16rem;
	margin: 0;
	padding: 0;
	font-size: 1.125rem;
	font-family: Nimbus Sans,sans-serif;
	font-weight: 700;
	line-height: 1.25;
}

.isu-wordmark-sitename a {
	text-decoration: none;
	font-weight: 700;
}

.isu-wordmark-sitename a:hover {
	color: var(--cardinal);
	text-decoration: none;
}
/* If there is both a unit and site name,
 * site name gets the unit's styling and then 
 * a border.
 */
.isu-wordmark-sitename_unit {
  margin-top: 0.5rem;
  padding-top: 0.5rem;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.1;
  color: #ffffff;
  border-top: 1px solid rgba(255, 255, 255, 0.5);
}
/* --------------------------------------  */
/* ## Responsive
/* --------------------------------------  */
@media screen and (max-width : 768px) {
  .isu-wordmark-logo {
    margin-top: 0.3rem;
    margin-bottom: 0rem;
    max-width: 300px;
  }
  .isu-wordmark-sitename {
    padding-left: 0px;
    padding-bottom: 0px;
 }
}

@media screen and (max-width : 1199px) {
  .isu-wordmark-sitename {
    width: 50%;
    margin-top: -1%;

  }
}

/* --- ## Search --- */
/*
 * There are two search bars in this theme, one in the Site Navbar, the other
 * on the 404 page. They are both generated by the same templates
 * so they must be styled differently via nested CSS.
 */

.isu-search > form {
  display: flex;
  justify-content: flex-end;
}
.isu-region_header-second .isu-search__search-field.form-control {
  /* .form-control from Bootstrap 4 */
  height: 2.5rem;
  width: 100%;
  border-radius: 0.25rem 0 0 0.25rem;
  border-top: 1px solid;
	border-bottom: 1px solid;
	border-left: 1px solid;
}
.isu-region_header-second {
	float: right;
	display: grid;
	grid-template-columns: 2fr;
}
.isu-site-navbar .isu-search__search-btn {
	border-top: 1px solid #eeeeee;
	border-right: 1px solid #eeeeee;
	border-bottom: 1px solid #eeeeee;
}
.isu-search__search-btn,
.search-page-form #edit-submit {
  height: 2.5rem;
  font-size: 1.15rem;
  line-height: 0;
  border-radius: 0 0.25rem 0.25rem 0;
}
.form-control {
	border-color: #eeeeee !important;
}
/* Specific to Site Navbar search */
.isu-search {
  padding: 1rem;
}
.isu-form-type_radio {
  float:left; 
  margin:0 20px 0 0;  
}
div#edit-search-broadness {
  margin:0 0 0 15px; 
}
/* Specific to 404 Page search */
.four-zero-four .isu-search > form {
	justify-content: center;
}
.four-zero-four .form-control {
	width: 400px;
	height: 2.5rem;
	border-radius: 0.25rem 0 0 0.25rem;
	border-left: 1px solid #eeeeee !important;
	border-right: 0px !important;
	border-top: 1px solid #eeeeee !important;
	border-bottom: 1px solid #eeeeee !important;
}
/* ... */

